[tool.poetry]
name = "modname"
version = "0.1.0"
description = ""
authors = ["Renzo Crisostomo <renzo@crisostomo.me>"]

[tool.poetry.dependencies]
python = "^3.8"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.910"
typed-ast = "1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
